Adding initial support for additional exchanges (MtGox)

--- a/popup.html
+++ b/popup.html
@@ -9,17 +9,34 @@
 		<div class="row">
 			<h1 class="title text-primary col-xs-12">CoinBase Prices</h1>
 		</div>
-		<div id="price-cluster" class="row hide">
+		<div id="coinbase-price-cluster" class="row hide">
 			<div class="col-xs-4">
-				<h3 class="main">$<span id="price-spot"></span></h3>
+				<h3 class="main">$<span id="coinbase-price-spot"></span></h3>
 				<small><strong>Price of 1BTC</strong></small>
 			</div>
 			<div class="col-xs-4">
-				<h3>$<span id="price-buy"></span></h3>
+				<h3>$<span id="coinbase-price-buy"></span></h3>
 				<small>Buy <span class="lookup-amount">1</span> BTC</small>
 			</div>
 			<div class="col-xs-4">
-				<h3>$<span id="price-sell"></span></h3>
+				<h3>$<span id="coinbase-price-sell"></span></h3>
+				<small>Sell <span class="lookup-amount">1</span> BTC</small>
+			</div>
+		</div>
+		<div class="row">
+			<h1 class="title text-primary col-xs-12">MtGox Prices</h1>
+		</div>
+		<div id="mtgox-price-cluster" class="row hide">
+			<div class="col-xs-4">
+				<h3 class="main">$<span id="mtgox-price-spot"></span></h3>
+				<small><strong>Price of 1BTC</strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>$<span id="mtgox-price-buy"></span></h3>
+				<small>Buy <span class="lookup-amount">1</span> BTC</small>
+			</div>
+			<div class="col-xs-4">
+				<h3>$<span id="mtgox-price-sell"></span></h3>
 				<small>Sell <span class="lookup-amount">1</span> BTC</small>
 			</div>
 		</div>
