Requests to each exchange are independent.

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 <body>
 	<section id="prices" name="prices" class="container">
 		<div class="row">
-			<h1 class="title text-primary col-xs-12">CoinBase Prices</h1>
+			<h1 class="title text-primary col-xs-12">CoinBase Prices <span id="coinbase-updated-at" class="text-muted invisible">(Updated <span id="coinbase-timestamp"></span>)</span></p></div></h1>
 		</div>
 		<div id="coinbase-price-cluster" class="row hide">
 			<div class="col-xs-4">
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<h1 class="title text-primary col-xs-12">MtGox Prices</h1>
+			<h1 class="title text-primary col-xs-12">MtGox Prices <span id="mtgox-updated-at" class="text-muted invisible">(Updated <span id="mtgox-timestamp"></span>)</span></p></div></h1>
 		</div>
 		<div id="mtgox-price-cluster" class="row hide">
 			<div class="col-xs-4">
@@ -57,7 +57,7 @@
 	<hr />
 	<section id="footer" name="footer" class="container">
 		<div id="meta" class="row">
-			<div class="col-xs-12"><p><a href="settings/index.html" id="options-link" target="_blank">Options, Questions &amp; Support</a><span id="updated-at" class="text-muted invisible"> | Updated <span id="timestamp"></span></span></p></div>
+			<div class="col-xs-12"><p><a href="settings/index.html" id="options-link" target="_blank">Options, Questions &amp; Support</a>
 		</div>
 	</section>
 
