Adding a refresh now option in the popup

--- a/popup.html
+++ b/popup.html
@@ -57,7 +57,7 @@
 	<hr />
 	<section id="footer" name="footer" class="container">
 		<div id="meta" class="row">
-			<div class="col-xs-12"><p><a href="settings/index.html" id="options-link" target="_blank">Options, Questions &amp; Support</a>
+			<div class="col-xs-12"><p><a href="settings/index.html" id="options-link" target="_blank">Options, Questions &amp; Support</a> | <a id="refresh-link">Refresh now</a>
 		</div>
 	</section>
 
