Adding support for BTC-e

--- a/popup.html
+++ b/popup.html
@@ -40,6 +40,23 @@
 				<small>Sell <span class="lookup-amount">1</span> BTC</small>
 			</div>
 		</div>
+		<div class="row">
+			<h1 class="title text-primary col-xs-12">BTC-e Prices <span id="btce-updated-at" class="text-muted invisible">(Updated <span id="btce-timestamp"></span>)</span></p></div></h1>
+		</div>
+		<div id="btce-price-cluster" class="row hide">
+			<div class="col-xs-4">
+				<h3 class="main">$<span id="btce-price-spot"></span></h3>
+				<small><strong>Price of 1BTC</strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>$<span id="btce-price-buy"></span></h3>
+				<small>Buy <span class="lookup-amount">1</span> BTC</small>
+			</div>
+			<div class="col-xs-4">
+				<h3>$<span id="btce-price-sell"></span></h3>
+				<small>Sell <span class="lookup-amount">1</span> BTC</small>
+			</div>
+		</div>
 		<div id="price-loading" class="row">
 			<div class="col-xs-12">
 				<p>Fetching Price Data</p>
