--- a/settings/index.html
+++ b/settings/index.html
@@ -30,6 +30,10 @@
                             <input id="main-exchange-mtgox" type="radio" name="main-exchange" value="mtgox">
                             <label for="main-exchange-mtgox">MtGox</label>
                         </div>
+                        <div>
+                            <input id="main-exchange-btce" type="radio" name="main-exchange" value="btce">
+                            <label for="main-exchange-btce">BTC-e</label>
+                        </div>
                     </div>
 
                     <h3>Update Frequency</h3>
