--- a/settings/index.html
+++ b/settings/index.html
@@ -34,6 +34,10 @@
                             <input id="main-exchange-btce" type="radio" name="main-exchange" value="btce">
                             <label for="main-exchange-btce">BTC-e</label>
                         </div>
+                        <div>
+                            <input id="main-exchange-virwoxsll" type="radio" name="main-exchange" value="virwoxsll">
+                            <label for="main-exchange-virwoxsll">VirWox SLL/BTC</label>
+                        </div>
                     </div>
 
                     <h3>Update Frequency</h3>
