Adding VirWox USD/SLL

--- a/popup.html
+++ b/popup.html
@@ -58,20 +58,37 @@
 			</div>
 		</div>
 		<div class="row">
+			<h1 class="title text-primary col-xs-12">VirWox BTC/SLL Prices <span id="virwoxbtc-updated-at" class="text-muted invisible">(Updated <span id="virwoxbtc-timestamp"></span>)</span></p></div></h1>
+		</div>
+		<div id="virwoxbtc-price-cluster" class="row hide">
+			<div class="col-xs-4">
+				<h3 class="main">SLL<span id="virwoxbtc-price-spot"></span></h3>
+				<small><strong>Price of 1BTC</strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>SLL<span id="virwoxbtc-price-buy"></span></h3>
+				<small>Buy <span class="lookup-amount">1</span> BTC</small>
+			</div>
+			<div class="col-xs-4">
+				<h3>SLL<span id="virwoxbtc-price-sell"></span></h3>
+				<small>Sell <span class="lookup-amount">1</span> BTC</small>
+			</div>
+		</div>
+		<div class="row">
 			<h1 class="title text-primary col-xs-12">VirWox BTC/SLL Prices <span id="virwoxsll-updated-at" class="text-muted invisible">(Updated <span id="virwoxsll-timestamp"></span>)</span></p></div></h1>
 		</div>
 		<div id="virwoxsll-price-cluster" class="row hide">
 			<div class="col-xs-4">
 				<h3 class="main">SLL<span id="virwoxsll-price-spot"></span></h3>
-				<small><strong>Price of 1BTC</strong></small>
+				<small><strong>Price of 1USD</strong></small>
 			</div>
 			<div class="col-xs-4">
-				<h3>SLL<span id="virwoxsll-price-buy"></span></h3>
-				<small>Buy <span class="lookup-amount">1</span> BTC</small>
+				<h3>$<span id="virwoxsll-price-buy"></span></h3>
+				<small>Buy <span class="lookup-amount-sll">1</span> SLL</small>
 			</div>
 			<div class="col-xs-4">
-				<h3>SLL<span id="virwoxsll-price-sell"></span></h3>
-				<small>Sell <span class="lookup-amount">1</span> BTC</small>
+				<h3>$<span id="virwoxsll-price-sell"></span></h3>
+				<small>Sell <span class="lookup-amount-sll">1</span> SLL</small>
 			</div>
 		</div>
 		<div id="price-loading" class="row">
