--- a/settings/index.html
+++ b/settings/index.html
@@ -34,10 +34,6 @@
                             <input id="main-exchange-btce" type="radio" name="main-exchange" value="btce">
                             <label for="main-exchange-btce">BTC-e</label>
                         </div>
-                        <div>
-                            <input id="main-exchange-virwoxsll" type="radio" name="main-exchange" value="virwoxsll">
-                            <label for="main-exchange-virwoxsll">VirWox SLL/BTC</label>
-                        </div>
                     </div>
 
                     <h3>Update Frequency</h3>
@@ -65,6 +61,8 @@
                     <div class="form-group">
                         <input type="text" id="lookup-amount" name="lookup-amount" placeholder="1" /> <span>BTC</span>
                         <p>The amount of BTC shown in the Buy and Sell Prices in the popup window. The badge always shows the spot price of 1BTC to USD.</p>
+                        <input type="text" id="lookup-amount-sll" name="lookup-amount-sll" placeholder="1" /> <span>SLL</span>
+                        <p>The amount of SLL shown in the Buy and Sell Prices in the popup window.</p>
                     </div>                
                 </form>
             </section>
