Adding support for eldolarblue.net

--- a/popup.html
+++ b/popup.html
@@ -91,6 +91,23 @@
 				<small>Sell <span class="lookup-amount-sll">1</span> SLL</small>
 			</div>
 		</div>
+		<div class="row">
+			<h1 class="title text-primary col-xs-12">El Dolar Blue Prices <span id="dolarblue-updated-at" class="text-muted invisible">(Updated <span id="dolarblue-timestamp"></span>)</span></p></div></h1>
+		</div>
+		<div id="dolarblue-price-cluster" class="row hide">
+			<div class="col-xs-4">
+				<h3 class="main">ARS<span id="dolarblue-price-spot"></span></h3>
+				<small><strong>Price of 1USD</strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>ARS<span id="dolarblue-price-buy"></span></h3>
+				<small>Buy <span class="lookup-amount-usd">1</span> USD</small>
+			</div>
+			<div class="col-xs-4">
+				<h3>ARS<span id="dolarblue-price-sell"></span></h3>
+				<small>Sell <span class="lookup-amount-usd">1</span> USD</small>
+			</div>
+		</div>
 		<div id="price-loading" class="row">
 			<div class="col-xs-12">
 				<p>Fetching Price Data</p>
