--- a/settings/index.html
+++ b/settings/index.html
@@ -34,6 +34,10 @@
                             <input id="main-exchange-btce" type="radio" name="main-exchange" value="btce">
                             <label for="main-exchange-btce">BTC-e</label>
                         </div>
+                        <div>
+                            <input id="main-exchange-dolarblue" type="radio" name="main-exchange" value="dolarblue">
+                            <label for="main-exchange-dolarblue">El Dolar Blue</label>
+                        </div>
                     </div>
 
                     <h3>Update Frequency</h3>
@@ -63,6 +67,8 @@
                         <p>The amount of BTC shown in the Buy and Sell Prices in the popup window. The badge always shows the spot price of 1BTC to USD.</p>
                         <input type="text" id="lookup-amount-sll" name="lookup-amount-sll" placeholder="1" /> <span>SLL</span>
                         <p>The amount of SLL shown in the Buy and Sell Prices in the popup window.</p>
+                        <input type="text" id="lookup-amount-usd" name="lookup-amount-usd" placeholder="1" /> <span>USD</span>
+                        <p>The amount of USD shown in the Buy and Sell Prices in the popup window.</p>
                     </div>                
                 </form>
             </section>
