--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,12 @@
 <body>
 	<section id="prices" name="prices" class="container">
 		<div class="row">
-			<h1 class="title text-primary col-xs-12">CoinBase Prices <span id="coinbase-updated-at" class="text-muted invisible">(Updated <span id="coinbase-timestamp"></span>)</span></p></div></h1>
+			<h1 class="title text-primary col-xs-12"><a href="http://bitcoinwisdom.com/markets/coinbase/btcusd" target="_blank">CoinBase Prices</a> <span id="coinbase-updated-at" class="text-muted invisible">(Updated <span id="coinbase-timestamp"></span>)</span></h1>
 		</div>
 		<div id="coinbase-price-cluster" class="row hide">
 			<div class="col-xs-4">
 				<h3 class="main">$<span id="coinbase-price-spot"></span></h3>
-				<small><strong>Price of 1BTC</strong></small>
+				<small><a href="https://coinbase.com/charts" target="_blank"><strong>Price of 1BTC</strong></a></small>
 			</div>
 			<div class="col-xs-4">
 				<h3>$<span id="coinbase-price-buy"></span></h3>
@@ -24,88 +24,74 @@
 			</div>
 		</div>
 		<div class="row">
-			<h1 class="title text-primary col-xs-12">MtGox Prices <span id="mtgox-updated-at" class="text-muted invisible">(Updated <span id="mtgox-timestamp"></span>)</span></p></div></h1>
+			<h1 class="title text-primary col-xs-4"><a href="http://bitcoinwisdom.com/markets/mtgox/btcusd" target="_blank">MtGox Price</a> <span id="mtgox-updated-at" class="text-muted invisible">(<span id="mtgox-timestamp"></span>)</span></h1>
+			<h1 class="title text-primary col-xs-4"><a href="http://bitcoinwisdom.com/markets/btce/btcusd" target="_blank">BTC-e Price</a> <span id="btce-updated-at" class="text-muted invisible">(<span id="btce-timestamp"></span>)</span></h1>
+			<h1 class="title text-primary col-xs-4"><a href="http://bitcoinwisdom.com/markets/bitstamp/btcusd" target="_blank">Bitstamp Price</a> <span id="bitstamp-updated-at" class="text-muted invisible">(<span id="bitstamp-timestamp"></span>)</span></h1>
 		</div>
-		<div id="mtgox-price-cluster" class="row hide">
-			<div class="col-xs-4">
+		<div class="row">
+			<div id="mtgox-price-cluster" class="col-xs-4 hide">
 				<h3 class="main">$<span id="mtgox-price-spot"></span></h3>
-				<small><strong>Price of 1BTC</strong></small>
+				<small><a href="http://mtgoxlive.com/orders" target="_blank"><strong>Price of 1BTC</strong></a></small>
 			</div>
-			<div class="col-xs-4">
-				<h3>$<span id="mtgox-price-buy"></span></h3>
-				<small>Buy <span class="lookup-amount">1</span> BTC</small>
-			</div>
-			<div class="col-xs-4">
-				<h3>$<span id="mtgox-price-sell"></span></h3>
-				<small>Sell <span class="lookup-amount">1</span> BTC</small>
-			</div>
-		</div>
-		<div class="row">
-			<h1 class="title text-primary col-xs-12">BTC-e Prices <span id="btce-updated-at" class="text-muted invisible">(Updated <span id="btce-timestamp"></span>)</span></p></div></h1>
-		</div>
-		<div id="btce-price-cluster" class="row hide">
-			<div class="col-xs-4">
+			<div id="btce-price-cluster" class="col-xs-4 hide">
 				<h3 class="main">$<span id="btce-price-spot"></span></h3>
+				<small><a href="https://btc-e.com/exchange/btc_usd" target="_blank"><strong>Price of 1BTC</strong></a></small>
+			</div>
+			<div id="bitstamp-price-cluster" class="col-xs-4 hide">
+				<h3 class="main">$<span id="bitstamp-price-spot"></span></h3>
+				<small><a href="https://www.bitstamp.net/market/order_book/" target="_blank"><strong>Price of 1BTC</strong></a></small>
+			</div>
+		</div>
+		<div class="row">
+			<h1 class="title text-primary col-xs-12"><a href="http://bitcoincharts.com/charts/virwoxSLL#rg180ztgSza1gSMAzm1g10za2gSMAzm2g25zxzi1gMACDzv" target="_blank">VirWox Prices</a> <span id="virwox-updated-at" class="text-muted invisible">(Updated <span id="virwox-timestamp"></span>)</span></h1>
+		</div>
+		<div id="virwox-price-cluster" class="row hide">
+			<div class="col-xs-4">
+				<h3 class="main">SLL<span id="virwox-price-spot"></span></h3>
+				<small><a href="https://www.virwox.com/market_depth.php?instr=11" target="_blank"><strong>Price of 1BTC</strong></a></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>SLL<span id="virwox-price-sll"></span></h3>
+				<small><a href="https://www.virwox.com/market_depth.php?instr=4" target="_blank">Per USD</a></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>$<span id="virwox-price-usd"></span></h3>
 				<small><strong>Price of 1BTC</strong></small>
 			</div>
-			<div class="col-xs-4">
-				<h3>$<span id="btce-price-buy"></span></h3>
-				<small>Buy <span class="lookup-amount">1</span> BTC</small>
-			</div>
-			<div class="col-xs-4">
-				<h3>$<span id="btce-price-sell"></span></h3>
-				<small>Sell <span class="lookup-amount">1</span> BTC</small>
-			</div>
 		</div>
 		<div class="row">
-			<h1 class="title text-primary col-xs-12">VirWox BTC/SLL Prices <span id="virwoxbtc-updated-at" class="text-muted invisible">(Updated <span id="virwoxbtc-timestamp"></span>)</span></p></div></h1>
-		</div>
-		<div id="virwoxbtc-price-cluster" class="row hide">
-			<div class="col-xs-4">
-				<h3 class="main">SLL<span id="virwoxbtc-price-spot"></span></h3>
-				<small><strong>Price of 1BTC</strong></small>
-			</div>
-			<div class="col-xs-4">
-				<h3>SLL<span id="virwoxbtc-price-buy"></span></h3>
-				<small>Buy <span class="lookup-amount">1</span> BTC</small>
-			</div>
-			<div class="col-xs-4">
-				<h3>SLL<span id="virwoxbtc-price-sell"></span></h3>
-				<small>Sell <span class="lookup-amount">1</span> BTC</small>
-			</div>
-		</div>
-		<div class="row">
-			<h1 class="title text-primary col-xs-12">VirWox BTC/SLL Prices <span id="virwoxsll-updated-at" class="text-muted invisible">(Updated <span id="virwoxsll-timestamp"></span>)</span></p></div></h1>
-		</div>
-		<div id="virwoxsll-price-cluster" class="row hide">
-			<div class="col-xs-4">
-				<h3 class="main">SLL<span id="virwoxsll-price-spot"></span></h3>
-				<small><strong>Price of 1USD</strong></small>
-			</div>
-			<div class="col-xs-4">
-				<h3>$<span id="virwoxsll-price-buy"></span></h3>
-				<small>Buy <span class="lookup-amount-sll">1</span> SLL</small>
-			</div>
-			<div class="col-xs-4">
-				<h3>$<span id="virwoxsll-price-sell"></span></h3>
-				<small>Sell <span class="lookup-amount-sll">1</span> SLL</small>
-			</div>
-		</div>
-		<div class="row">
-			<h1 class="title text-primary col-xs-12">El Dolar Blue Prices <span id="dolarblue-updated-at" class="text-muted invisible">(Updated <span id="dolarblue-timestamp"></span>)</span></p></div></h1>
+			<h1 class="title text-primary col-xs-12">Dolar Blue <span id="dolarblue-updated-at" class="text-muted invisible">(Updated <span id="dolarblue-timestamp"></span>)</span></h1>
 		</div>
 		<div id="dolarblue-price-cluster" class="row hide">
 			<div class="col-xs-4">
 				<h3 class="main">ARS<span id="dolarblue-price-spot"></span></h3>
-				<small><strong>Price of 1USD</strong></small>
-			</div>
-			<div class="col-xs-4">
-				<h3>ARS<span id="dolarblue-price-buy"></span></h3>
-				<small>Buy <span class="lookup-amount-usd">1</span> USD</small>
+				<small><a href="http://www.eldolarblue.net/dolar-blue-tendencias-estadisticas-historico.php" target="_blank"><strong>Price of 1USD</a></strong></small>
 			</div>
 			<div class="col-xs-4">
 				<h3>ARS<span id="dolarblue-price-sell"></span></h3>
-				<small>Sell <span class="lookup-amount-usd">1</span> USD</small>
+				<small><strong>Sell 1USD</strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>ARS<span id="dolarblue-price-btc"></span></h3>
+				<small><a href="http://www.mercado-bitcoin.com.ar" target="_blank"><strong>Buy 1BTC</strong></a></small>
+			</div>
+		</div>
+		</div>
+		<div class="row">
+			<h1 class="title text-primary col-xs-12">Dolar Oficial <span id="dolaroficial-updated-at" class="text-muted invisible">(Updated <span id="dolaroficial-timestamp"></span>)</span></h1>
+		</div>
+		<div id="dolaroficial-price-cluster" class="row hide">
+			<div class="col-xs-4">
+				<h3 class="main">ARS<span id="dolaroficial-price-spot"></span></h3>
+				<small><strong>Price of 1USD</strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3>ARS<span id="dolaroficial-price-tarjeta"></span></h3>
+				<small>Tarjeta</small>
+			</div>
+			<div class="col-xs-4">
+				<h3>ARS<span id="dolaroficial-price-paypal"></span></h3>
+				<small>PayPal</small>
 			</div>
 		</div>
 		<div id="price-loading" class="row">
