--- a/settings/index.html
+++ b/settings/index.html
@@ -20,7 +20,7 @@
                 <hr/>
                 <form id="user-settings">
                     <h3>Main exchange</h3>
-                    <p>The latest price in the selected exchange will be shown in the badge.</p>
+                    <p>Exchange shown in badge and used for calculations.</p>
                     <div class="radio">
                         <div>
                             <input id="main-exchange-coinbase" type="radio" name="main-exchange" value="coinbase">
@@ -35,8 +35,8 @@
                             <label for="main-exchange-btce">BTC-e</label>
                         </div>
                         <div>
-                            <input id="main-exchange-dolarblue" type="radio" name="main-exchange" value="dolarblue">
-                            <label for="main-exchange-dolarblue">El Dolar Blue</label>
+                            <input id="main-exchange-bitstamp" type="radio" name="main-exchange" value="bitstamp">
+                            <label for="main-exchange-bitstamp">Bitstamp</label>
                         </div>
                     </div>
 
@@ -65,10 +65,6 @@
                     <div class="form-group">
                         <input type="text" id="lookup-amount" name="lookup-amount" placeholder="1" /> <span>BTC</span>
                         <p>The amount of BTC shown in the Buy and Sell Prices in the popup window. The badge always shows the spot price of 1BTC to USD.</p>
-                        <input type="text" id="lookup-amount-sll" name="lookup-amount-sll" placeholder="1" /> <span>SLL</span>
-                        <p>The amount of SLL shown in the Buy and Sell Prices in the popup window.</p>
-                        <input type="text" id="lookup-amount-usd" name="lookup-amount-usd" placeholder="1" /> <span>USD</span>
-                        <p>The amount of USD shown in the Buy and Sell Prices in the popup window.</p>
                     </div>                
                 </form>
             </section>
