Adding support for Bullionvault (gold, silver)

--- a/popup.html
+++ b/popup.html
@@ -94,6 +94,23 @@
 				<small>PayPal</small>
 			</div>
 		</div>
+		<div class="row">
+			<h1 class="title text-primary col-xs-12"><a href='https://www.bullionvault.com/gold_market.do#!/orderboard' target="_blank">Gold/Silver</a> <span id="bullionvault-updated-at" class="text-muted invisible">(Updated <span id="bullionvault-timestamp"></span>)</span></h1>
+		</div>
+		<div id="bullionvault-price-cluster" class="row hide">
+			<div class="col-xs-4">
+				<h3 class="main">$<span id="bullionvault-price-gold"></span></h3>
+				<small><a href="http://www.bullionvault.com/gold-price-chart.do" target="_blank"><strong>1oz (Gold)</a></strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3 class="main">$<span id="bullionvault-price-silver"></span></h3>
+				<small><a href="http://www.bullionvault.com/silver-price-chart.do" target="_blank"><strong>1oz (Silver)</a></strong></small>
+			</div>
+			<div class="col-xs-4">
+				<h3><span id="bullionvault-btcxau-ratio"></span>%</h3>
+				<small>BTC/XAU Ratio</small>
+			</div>
+		</div>
 		<div id="price-loading" class="row">
 			<div class="col-xs-12">
 				<p>Fetching Price Data</p>
