Updating tooltip along with badge + moving shared data/code

--- a/popup.html
+++ b/popup.html
@@ -167,6 +167,7 @@
 	</section>
 
 	<script src="../scripts/jquery-2.0.3.min.js"></script>
+	<script src="../scripts/common.js"></script>
 	<script src="../scripts/popup.js"></script>
 
 </body>
