Fetching dollar prices from ambito.com

--- a/popup.html
+++ b/popup.html
@@ -90,12 +90,12 @@
 			<div class="col-xs-12"></div>
 		</div>
 		<div class="row">
-			<h1 class="title text-primary col-xs-12">Dolar Blue <span id="dolarblue-updated-at" class="text-muted invisible">(Updated <span id="dolarblue-timestamp"></span>)</span></h1>
+			<h1 class="title text-primary col-xs-12"><a href="http://www.ambito.com/economia/mercados/monedas/dolar/info/?ric=ARSB=" target="_blank">Dolar Blue</a> <span id="dolarblue-updated-at" class="text-muted invisible">(Updated <span id="dolarblue-timestamp"></span>, Ult. act. <span id="dolarblue-uact"></span>)</span></h1>
 		</div>
 		<div id="dolarblue-price-cluster" class="row hide">
 			<div class="col-xs-4">
 				<h3 class="main">ARS<span id="dolarblue-price-spot"></span></h3>
-				<small><a href="http://www.eldolarblue.net/dolar-blue-tendencias-estadisticas-historico.php" target="_blank"><strong>Price of 1USD</a></strong></small>
+				<small><strong>Price of 1USD</strong></small>
 			</div>
 			<div class="col-xs-4">
 				<h3>ARS<span id="dolarblue-price-sell"></span></h3>
@@ -113,7 +113,7 @@
 			<div class="col-xs-12"></div>
 		</div>
 		<div class="row">
-			<h1 class="title text-primary col-xs-12">Dolar Oficial <span id="dolaroficial-updated-at" class="text-muted invisible">(Updated <span id="dolaroficial-timestamp"></span>)</span></h1>
+			<h1 class="title text-primary col-xs-12"><a href="http://www.ambito.com/economia/mercados/monedas/dolar/info/?ric=ARSSCBCRA" target="_blank">Dolar Oficial</a> <span id="dolaroficial-updated-at" class="text-muted invisible">(Updated <span id="dolaroficial-timestamp"></span>, Ult. act. <span id="dolaroficial-uact"></span>)</span></h1>
 		</div>
 		<div id="dolaroficial-price-cluster" class="row hide">
 			<div class="col-xs-4">
@@ -121,12 +121,12 @@
 				<small><strong>Price of 1USD</strong></small>
 			</div>
 			<div class="col-xs-4">
-				<h3>ARS<span id="dolaroficial-price-tarjeta"></span></h3>
-				<small>Tarjeta</small>
+				<h3>ARS<span id="dolaroficial-price-tenencia"></span></h3>
+				<small>Tenencia</small>
 			</div>
 			<div class="col-xs-4">
-				<h3>ARS<span id="dolaroficial-price-paypal"></span></h3>
-				<small>PayPal</small>
+				<h3>ARS<span id="dolaroficial-price-tarjeta"></span></h3>
+				<small>Tarjeta</small>
 			</div>
 		</div>
 		<div id="dolaroficial-price-loading" class="row">
