--- a/background.html
+++ b/background.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <script type="text/javascript" src="fancy-settings/source/lib/store.js"></script>
+<script type="text/javascript" src="scripts/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="scripts/common.js"></script>
 <script type="text/javascript" src="scripts/background.js"></script>
 
